[gd_scene load_steps=63 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/player/jump/jump_1.png" type="Texture" id=1]
[ext_resource path="res://player_cutscenes.gd" type="Script" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_walk/playerwalksprite_0.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_walk/playerwalksprite_3.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_walk/playerwalksprite_1.png" type="Texture" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/jump/jump_0.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/dialogue/error.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_shoot/playershootsprite_0.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_shoot/playershootsprite_2.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_shoot/playershootsprite_1.png" type="Texture" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_walk/playerwalksprite_2.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartsleep1.png" type="Texture" id=12]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_healthbar_full.png" type="Texture" id=13]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartsleep2.png" type="Texture" id=14]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_idle/player_idle_sprite_2.png" type="Texture" id=15]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_idle/player_idle_sprite_0.png" type="Texture" id=16]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_idle/player_idle_sprite_1.png" type="Texture" id=17]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_idle/player_idle_sprite_3.png" type="Texture" id=18]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_punch/player_punch_sprite_1.png" type="Texture" id=19]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_punch/player_punch_sprite_0.png" type="Texture" id=20]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_quit.png" type="Texture" id=21]
[ext_resource path="res://CRTShader.shader" type="Shader" id=22]
[ext_resource path="res://Placeholder Textures for Shards of the Past/CRTFrame.png" type="Texture" id=23]
[ext_resource path="res://Placeholder Textures for Shards of the Past/white.png" type="Texture" id=24]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_quit_pressed.png" type="Texture" id=25]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_play_pressed.png" type="Texture" id=26]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_retry_pressed.png" type="Texture" id=27]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_menu.png" type="Texture" id=28]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_retry.png" type="Texture" id=29]
[ext_resource path="res://Placeholder Textures for Shards of the Past/paused_text.png" type="Texture" id=30]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sotp_menu_pressed.png" type="Texture" id=31]
[ext_resource path="res://Placeholder Textures for Shards of the Past/sign/genetics_lab.png" type="Texture" id=32]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartidle1.png" type="Texture" id=33]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartidle3.png" type="Texture" id=34]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/climb/player_climb_3.png" type="Texture" id=35]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/climb/player_climb_1.png" type="Texture" id=36]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/climb/player_climb_2.png" type="Texture" id=37]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/climb/player_climb_0.png" type="Texture" id=38]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartidle2.png" type="Texture" id=39]
[ext_resource path="res://Placeholder Textures for Shards of the Past/achievements/extinguished_card.png" type="Texture" id=40]
[ext_resource path="res://Placeholder Textures for Shards of the Past/fierygoliath_healthbar/fierygoliath_healthbar_full.png" type="Texture" id=41]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_get-talon'd/player_talonstab_sprite_1.png" type="Texture" id=42]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_player_get-talon'd/player_talonstab_sprite_0.png" type="Texture" id=43]
[ext_resource path="res://Placeholder Textures for Shards of the Past/transitions/fadeout.png" type="Texture" id=44]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartidle4.png" type="Texture" id=45]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/die, fall asleep/dartsleep3.png" type="Texture" id=46]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/walk_side/player_sidewalk_1.png" type="Texture" id=47]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/walk_side/player_sidewalk_3.png" type="Texture" id=48]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/walk_side/player_sidewalk_2.png" type="Texture" id=49]
[ext_resource path="res://Placeholder Textures for Shards of the Past/player/walk_side/player_sidewalk_0.png" type="Texture" id=50]
[ext_resource path="res://Placeholder Textures for Shards of the Past/cutscenes/skiptext.png" type="Texture" id=51]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 9 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "shoot",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "talonstab",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "punch",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "climb_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 35 ) ],
"loop": true,
"name": "climb",
"speed": 6.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 45 ), ExtResource( 33 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 45 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 46 ) ],
"loop": false,
"name": "hit_by_dart",
"speed": 6.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 50 ) ],
"loop": false,
"name": "back_walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 8 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float BarrelPower = 1.1;

vec2 distort(vec2 p) 
{

	float angle = p.y / p.x;
	float theta = atan(p.y,p.x);
	float radius = pow(length(p), BarrelPower);
	
	p.x = radius * cos(theta);
	p.y = radius * sin(theta);
	
	return 0.5 * (p + vec2(1.0,1.0));
}
void fragment()
{
	
vec2 xy = SCREEN_UV * 2.0;
xy.x -= 1.0;
xy.y -= 1.0;

float d = length(xy);
if(d < 1.5){
	xy = distort(xy);
}
else{
	xy = SCREEN_UV;
}
COLOR = texture(SCREEN_TEXTURE,xy);
}



"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/BarrelPower = 1.1

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float color_bleeding = 0.9;
uniform float bleeding_range = 2;
uniform float screen_width = 1024;
void fragment()
{
	float pixel_size = 1.0/screen_width*bleeding_range;
	vec4 color_left = texture(SCREEN_TEXTURE,SCREEN_UV - vec2(pixel_size, 0));
	vec4 current_color = texture(SCREEN_TEXTURE,SCREEN_UV);
	current_color = current_color*vec4(color_bleeding,0.5,0.25,1);
	color_left = color_left*vec4(0.25,0.5,color_bleeding,1);
	COLOR.rgba = (current_color + color_left);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/color_bleeding = 0.9
shader_param/bleeding_range = 0.5
shader_param/screen_width = 640.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform float lines_distance = 4.0;
uniform float pixel_size = 2.0;
uniform float size_screen = 600;
uniform float scanline_alpha = 0.9;
uniform float lines_velocity = 30.0;

void fragment()
{
	float line_row = floor((SCREEN_UV.y * size_screen/pixel_size) + mod(TIME*lines_velocity, lines_distance));

	float n = 1.0 - ceil((mod(line_row,lines_distance)/lines_distance));

vec4 c = texture(SCREEN_TEXTURE,SCREEN_UV);
c = c - n*c*(1.0 - scanline_alpha);
c.a = 1.0;
COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/lines_distance = 4.0
shader_param/pixel_size = 2.0
shader_param/size_screen = 600.0
shader_param/scanline_alpha = 0.9
shader_param/lines_velocity = 30.0

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 22 )
shader_param/BarrelPower = 1.05

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 19, 4 )

[node name="Player1" type="KinematicBody2D"]
position = Vector2( 0, 3 )
z_index = 2
collision_layer = 257
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.9, 0.92618 )
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -3 )
current = true
smoothing_speed = 50.0

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[node name="Shader" type="Node2D" parent="."]
position = Vector2( 0, -3 )
z_index = 25

[node name="Control" type="Control" parent="Shader"]
margin_left = -158.533
margin_top = -91.3579
margin_right = -118.533
margin_bottom = -51.3579
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shaders" type="Control" parent="Shader/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Curvature" type="TextureRect" parent="Shader/Control/Shaders"]
visible = false
material = SubResource( 5 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBleeding" type="TextureRect" parent="Shader/Control/Shaders"]
visible = false
material = SubResource( 7 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 24 )
expand = true

[node name="ScanLine" type="TextureRect" parent="Shader/Control/Shaders"]
visible = false
material = SubResource( 9 )
margin_top = 1.0
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRT" type="TextureRect" parent="Shader/Control/Shaders"]
material = SubResource( 10 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTFrame" type="TextureRect" parent="Shader/Control"]
margin_left = -1.467
margin_top = 0.357903
margin_right = 338.533
margin_bottom = 246.358
rect_scale = Vector2( 0.946396, 0.738916 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer4" type="Timer" parent="."]
wait_time = 4.0

[node name="Area2D2" type="Area2D" parent="."]
visible = false
position = Vector2( 6, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -6, 0 )
shape = SubResource( 11 )
disabled = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -55.0
margin_right = 63.0
margin_bottom = 101.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 106.0
margin_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_right = 86.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 26 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 86.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 27 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_top = 40.0
margin_right = 86.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 31 )

[node name="TextureButton4" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 86.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 25 )

[node name="Timer5" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer6" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer7" type="Timer" parent="."]
wait_time = 0.333

[node name="Timer8" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer9" type="Timer" parent="."]
wait_time = 0.2

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 0, 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -75.0
margin_top = -86.0
margin_right = 77.0
margin_bottom = 78.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer10" type="Timer" parent="."]
wait_time = 0.1

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 0, -3 )

[node name="Timer11" type="Timer" parent="."]
process_mode = 0

[node name="Timer12" type="Timer" parent="."]
process_mode = 0

[node name="Timer13" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer14" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
volume_db = -1.0
autoplay = true

[node name="Transition" type="Sprite" parent="."]
position = Vector2( 0.999997, -3 )
scale = Vector2( 20.25, 11.5 )
z_index = 16
texture = ExtResource( 44 )

[node name="Timer15" type="Timer" parent="."]
wait_time = 0.02

[node name="skip_text" type="Sprite" parent="."]
visible = false
position = Vector2( 122, -76 )
texture = ExtResource( 51 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = -144.0
margin_top = -83.0
margin_right = -78.0
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 66.0
margin_bottom = 11.0

[node name="Boss_HB" type="Sprite" parent="MarginContainer/HBoxContainer"]
visible = false
position = Vector2( 144, 7 )
z_index = 15
texture = ExtResource( 41 )

[node name="Boss_HB_2" type="Sprite" parent="MarginContainer/HBoxContainer"]
visible = false
position = Vector2( 144, 28 )
z_index = 15
texture = ExtResource( 13 )

[node name="Sign" type="Sprite" parent="MarginContainer/HBoxContainer"]
visible = false
position = Vector2( 144, 86 )
z_index = 15
texture = ExtResource( 32 )

[node name="Dialogue" type="Sprite" parent="MarginContainer/HBoxContainer"]
visible = false
position = Vector2( 145, 140 )
z_index = 15
texture = ExtResource( 7 )

[node name="Achievement" type="Sprite" parent="MarginContainer/HBoxContainer"]
visible = false
position = Vector2( 256, 6 )
z_index = 15
texture = ExtResource( 40 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
[connection signal="timeout" from="Timer9" to="." method="_on_Timer9_timeout"]
[connection signal="timeout" from="Timer10" to="." method="_on_Timer10_timeout"]
[connection signal="timeout" from="Timer11" to="." method="_on_Timer11_timeout"]
[connection signal="timeout" from="Timer12" to="." method="_on_Timer12_timeout"]
[connection signal="timeout" from="Timer13" to="." method="_on_Timer13_timeout"]
[connection signal="timeout" from="Timer14" to="." method="_on_Timer14_timeout"]
[connection signal="timeout" from="Timer15" to="." method="_on_Timer15_timeout"]
